--- a/HW_weather/style.css
+++ b/HW_weather/style.css
@@ -1,5 +1,5 @@
 body {
-    background: radial-gradient(circle at 100%, #000, #444 50%, #eee 55%, #333 100%);
+    background: radial-gradient(circle at 100%, #000, #2929ff 50%, #333 53%, #eee 55%, #57d5ff 60%, #333 100%);
     color: #fff;
     font-size: 150%;
 }
@@ -17,6 +17,7 @@ body {
     transform: translateY(-50%);
     flex-direction: column;
 }
+
 .container__location {
     float: left;
     top: 30%;
@@ -76,11 +77,15 @@ sub {
 
 #mouse_over #hidden {
     margin-top: 10px;
-    margin-left: 3px;
+    margin-left: -1px;
     opacity: 0;
     font-size: 15px;
 }
 
 #mouse_over:hover #hidden {
     opacity: 1;
+}
+
+.hiddenHtml {
+    margin: 2px;
 }
